Made theory proof more readable

--- a/docs/theory_proof.ipynb
+++ b/docs/theory_proof.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Provide cx for the statement:\n",
-    "inv2(x,y,a,b) = inv(x,y)[5000->a, 10000->b]"
+    "## Proofs for equisat/non-equisat for variable substitution technique used in magicXform\n",
+    "\n",
+    "In the file represented original transition system (ts0) and transformed transition system (ts1)"
    ]
   },
   {
@@ -165,6 +166,13 @@
    ],
    "source": [
     "chc_to_str(vc1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Invariants for those 2 systems locates below"
    ]
   },
   {
@@ -413,14 +421,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Invariant for the original benchmark is: <br>\n",
+    "### 1. Provide cx for the statement: inv2(x,y,a,b) = inv(x,y)[5000->a, 10000->b]\n",
+    "\n",
+    "* Invariant for the original benchmark is: <br>\n",
     "Inv1(x,y) = \n",
     "\n",
     "&emsp;(¬(y ≥ 5001) ∨ ¬(y + -1·x ≥ 1)) ∧ ¬(y + -1·x ≤ -1) ∧ ¬(y ≤ 4999) =\n",
     "\n",
     "&emsp;(y ≥ 5001) => (y ≥ x + 1) ∧ y ≥ x ∧ y > 4999\n",
     "\n",
-    "Invariant for the transformed benchmark is: <br>\n",
+    "* Invariant for the transformed benchmark is: <br>\n",
     "Inv2(x,y,a,b) = \n",
     "\n",
     "&emsp;(¬(y ≥ 5001) ∨ x ≥ y) ∧ y ≥ a ∧ x ≤ y =\n",
@@ -428,14 +438,20 @@
     "&emsp; (y > a => x ≥ y) ∧ y ≥ a ∧ x ≤ y\n",
     "\n",
     "\n",
-    "We need to prove that \n",
-    "Inv1(x,y)[5000->a, 10000->b] != Inv2(x,y,a,b)\n",
+    "#### We need to prove that Inv1(x,y)[5000->a, 10000->b] != Inv2(x,y,a,b) and provide a cx\n",
     "\n",
     "\n",
     "Let's rewrite Inv1(x,y) in such way: <br>\n",
-    "Inv1(x,y) = ((y >= 5001 => x>=y) && y >= 5000 && x <= y)\n",
+    "Inv1(x,y) = ((y ≥ 5001 => x>=y) ∧ y ≥ 5000 ∧ x ≤ y)\n",
     "<br>\n",
-    "Inv1(x,y)[5000->a, 10000->b] = ((y >= 5001 => x>=y) && y >= a && x <= y)\n"
+    "Inv1(x,y)[5000->a, 10000->b] = ((y ≥ 5001 => x≥y) ∧ y ≥ a ∧ x ≤ y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Let's to find a cx using z3:"
    ]
   },
   {
