--- a/docs/theory_proof.ipynb
+++ b/docs/theory_proof.ipynb
@@ -474,32 +474,26 @@
    "source": [
     "from z3 import *\n",
     "\n",
-    "# Create Z3 variables\n",
     "a, b, x, y, x_prime, y_prime = Ints('a b x y x_prime y_prime')\n",
     "\n",
-    "# Create a Z3 solver\n",
     "solver = Solver()\n",
     "\n",
-    "# Initial conditions\n",
     "solver.add(x == 0)\n",
     "solver.add(y == a)\n",
     "\n",
-    "# Transition relation constraints\n",
     "transition_constraints = And(\n",
     "    x_prime == x + 1,\n",
     "    y_prime == If(x >= a, y + 1, y)\n",
     ")\n",
     "\n",
-    "# Invariant constraints\n",
     "invariant_constraints = And(\n",
     "    Implies(y > 5001, x >= y),\n",
     "    y >= a,\n",
     "    x <= y\n",
     ")\n",
     "\n",
-    "# Add transition relation and invariant constraints to the solver\n",
     "solver.add(transition_constraints)\n",
-    "solver.add(Not(invariant_constraints))  # Adding negation of the invariant for checking\n",
+    "solver.add(Not(invariant_constraints))\n",
     "\n",
     "# Check for satisfiability\n",
     "if solver.check() == unsat:\n",
@@ -518,12 +512,17 @@
    "metadata": {},
    "source": [
     "### 2. Prove the statement:\n",
-    "inv2(x,y,a,b) = inv(x,y) ∧ a = 5000 ∧ b = 10000"
+    "inv2(x,y,a,b) = inv(x,y) ∧ a = 5000 ∧ b = 10000\n",
+    "\n",
+    "*    Ts0: `I0=Inv(x,y)`\n",
+    "*    Ts1: `I2=Inv2(x,y,a,b)`\n",
+    "\n",
+    "We aim to prove that (`I0`∧(a=5000)∧(b=10000)) ≡ `I2`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -544,22 +543,23 @@
     "solver = Solver()\n",
     "\n",
     "# Define the invariants for Ts0 and Ts1\n",
-    "I0 = And(\n",
-    "    Implies(y > 5000, x >= y),\n",
-    "    y >= 5000,\n",
-    "    x <= y\n",
-    ")\n",
-    "I1 = And( a1 == 5000, b1 == 10000, Implies(y1 >= a, x1 >= y1), x1 <= y1, y1 >= a1)\n",
+    "I0 = And(Implies(y > 5000, x >= y), y >= 5000, x <= y)\n",
+    "I2 = And( a1 == 5000, b1 == 10000, \n",
+    "         Implies(y1 >= a1, x1 >= y1), x1 <= y1, y1 >= a1)\n",
+    "\n",
     "\n",
     "# Check if (I0 and (a = 5000) and (b = 10000)) is equivalent to I1\n",
-    "solver.add(Not(Implies(And(I0, a1 == 5000, b1 == 10000), I1)))\n",
-    "solver.add(Not(Implies(I1, And(I0, a1 == 5000, b1 == 10000))))\n",
+    "solver.add(Not(Implies(And(I0, a1 == 5000, b1 == 10000), I2)))\n",
+    "solver.add(Not(Implies(I2, And(I0, a1 == 5000, b1 == 10000))))\n",
+    "\n",
     "\n",
     "# Check for satisfiability (unsat implies equivalence)\n",
     "if solver.check() == unsat:\n",
     "    print(\"Invariant equivalency holds.\")\n",
     "else:\n",
-    "    print(\"Invariant equivalency does not hold.\")\n"
+    "    print(\"Invariant equivalency does not hold.\")\n",
+    "    m = solver.model()\n",
+    "    print(m)\n"
    ]
   }
  ],
