UPD proof_tasks, added more clear notes and a pic

--- a/docs/theory_proof.ipynb
+++ b/docs/theory_proof.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p style=\"font-size: 12px\">Prerequisite: During last weeks of summer I tried to show my technique to my advisor's collegue. During the conversation I got a task to prove 2 statement that will prove my technique. The picture of notes from this conversation I attach here. Everything on the blackboard was duplicated to this file. As an example was taken the file <a href=\"../challenges/s_split_01.smt2\"><code>s_split_01.smt2</code></a></p>\n",
+    "\n",
+    "<img src=\"proof_tasks.jpg\" alt=\"drawing\" width=\"300\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Proofs for equisat/non-equisat for variable substitution technique used in magicXform\n",
     "\n",
     "In the file represented original transition system (ts0) and transformed transition system (ts1)"
@@ -522,13 +531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "solver:\n",
+      "Invariant equivalency holds.\n",
+      "\n",
+      "solver2:\n",
       "Invariant equivalency holds.\n"
      ]
     }
@@ -541,6 +554,7 @@
     "x1, y1, a1, b1 = Ints('x1 y1 a1 b1')\n",
     "\n",
     "solver = Solver()\n",
+    "solver2 = Solver()\n",
     "\n",
     "# Define the invariants for Ts0 and Ts1\n",
     "I0 = And(Implies(y > 5000, x >= y), y >= 5000, x <= y)\n",
@@ -552,14 +566,32 @@
     "solver.add(Not(Implies(And(I0, a1 == 5000, b1 == 10000), I2)))\n",
     "solver.add(Not(Implies(I2, And(I0, a1 == 5000, b1 == 10000))))\n",
     "\n",
+    "# NOTE: solver work above is the main here, but when I thought about \n",
+    "# the thing that we are trying to prove, I realized that adding constrains \n",
+    "# to I0 makes no sense, because I didn't pass a or b somewhere in the \n",
+    "# invariant. If I add `a` and `b` to I0 and substitute all 5000 and 1000 to\n",
+    "# the variables I'll get the I2 statement. So I think I can try to check\n",
+    "# equisat for\n",
+    "# inv2(x,y,a,b) = inv(x,y)\n",
+    "#\n",
+    "solver2.add(Not(Implies(I0, I2)))\n",
+    "solver2.add(Not(Implies(I2, I0)))\n",
+    "\n",
     "\n",
     "# Check for satisfiability (unsat implies equivalence)\n",
-    "if solver.check() == unsat:\n",
-    "    print(\"Invariant equivalency holds.\")\n",
-    "else:\n",
-    "    print(\"Invariant equivalency does not hold.\")\n",
-    "    m = solver.model()\n",
-    "    print(m)\n"
+    "def check_is_sat(solver):\n",
+    "    if solver.check() == unsat:\n",
+    "        print(\"Invariant equivalency holds.\")\n",
+    "    else:\n",
+    "        print(\"Invariant equivalency does not hold.\")\n",
+    "        m = solver.model()\n",
+    "        print(m)\n",
+    "\n",
+    "print(f\"solver:\")\n",
+    "check_is_sat(solver)\n",
+    "print()\n",
+    "print(f\"solver2:\")\n",
+    "check_is_sat(solver2)\n"
    ]
   }
  ],
