Moved everything to classes, cleaned file

--- a/docs/theory_proof.ipynb
+++ b/docs/theory_proof.ipynb
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.insert(1, '/Users/ekvashyn/Code/spacer-on-jupyter/src/')\n",
     "from spacer_tutorial import *\n",
-    "import z3\n",
+    "from z3 import *\n",
     "z3.set_param(proof=True)\n",
     "z3.set_param(model=True)\n",
     "z3.set_html_mode(True)\n"
@@ -484,24 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from z3 import *\n",
-    "\n",
-    "def check_is_sat(solver):\n",
-    "    if solver.check() == unsat:\n",
-    "        print(\"Invariant equivalency holds.\")\n",
-    "    else:\n",
-    "        print(\"Invariant equivalency does not hold.\")\n",
-    "        m = solver.model()\n",
-    "        print(m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -510,64 +493,95 @@
      "text": [
       "Check the initialization condition Init => Inv is valid:\n",
       "Invariant equivalency does not hold.\n",
+      "Counterexample:\n",
       "[x = 0, a = 5001, y = 5001]\n",
+      "\n",
       "Check the condition Inv ∧ Tr => Inv` is valid:\n",
       "Invariant equivalency does not hold.\n",
-      "[x = 5000,\n",
-      " y_prime = 5000,\n",
-      " x_prime = 5001,\n",
-      " a = 5001,\n",
+      "Counterexample:\n",
+      "[x = 4999,\n",
+      " y_prime = 5001,\n",
+      " x_prime = 5000,\n",
+      " a = 4999,\n",
       " y = 5000]\n",
+      "\n",
       "Check the initialization condition Inv ∧ Bad => False` is valid:\n",
       "Invariant equivalency does not hold.\n",
-      "[x = 0, y_prime = 5001, x_prime = 1, y = 5000, a = 0]\n"
+      "Counterexample:\n",
+      "[b = 0, x_prime = 1, x = 0, y = 5000, y_prime = 0]\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "def inv_gen(u,w):\n",
-    "    return And(\n",
-    "    Implies(w >= 5001, u >= w),\n",
-    "    w > 4999,\n",
-    "    u <= w)\n",
+    "class TransitionSystem:\n",
+    "    def __init__(self):\n",
+    "        self.a, self.b, self.x, self.y, self.x_prime, self.y_prime = Ints('a b x y x_prime y_prime')\n",
     "\n",
-    "a, b, x, y, x_prime, y_prime = Ints('a b x y x_prime y_prime')\n",
+    "    def inv_gen(self, u, w):\n",
+    "        '''Returns an invariant with contrains that don't have number 5000 explicitly'''\n",
+    "        return And(\n",
+    "            Implies(w >= 5001, u >= w),\n",
+    "            w > 4999,\n",
+    "            u <= w)\n",
     "\n",
-    "init_constraints = And(\n",
-    "    x == 0,\n",
-    "    y == a  # If we will put y == 5000 (or a == 5000 before) the first solver will be valid\n",
-    ")\n",
+    "    def init_constraints(self):\n",
+    "        return And(self.x == 0, self.y == self.a)\n",
     "\n",
-    "transition_constraints = And(\n",
-    "    x_prime == x + 1,\n",
-    "    y_prime == If(x >= a, y + 1, y) #y_prime == If(x >= 5000, y + 1, y) works\n",
-    ")\n",
-    "bad_state = And(x == b, x_prime != y_prime) #x == 10000 works\n",
+    "    def transition_constraints(self):\n",
+    "        return And(\n",
+    "            self.x_prime == self.x + 1,\n",
+    "            self.y_prime == If(self.x >= self.a, self.y + 1, self.y))\n",
     "\n",
-    "invariant_constraints = inv_gen(x,y)\n",
-    "invariant_prime_constraints = inv_gen(x_prime, y_prime)\n",
+    "    def bad_state(self):\n",
+    "        return And(self.x == self.b, self.x_prime != self.y_prime)\n",
+    "\n",
+    "    def invariant_constraints(self):\n",
+    "        return self.inv_gen(self.x, self.y)\n",
+    "\n",
+    "    def invariant_prime_constraints(self):\n",
+    "        return self.inv_gen(self.x_prime, self.y_prime)\n",
+    "\n",
+    "    def prove_solver(self, solver):\n",
+    "        checked = solver.check() == unsat\n",
+    "        if checked:\n",
+    "            print(\"Invariant equivalency holds.\")\n",
+    "        else:\n",
+    "            print(\"Invariant equivalency does not hold.\\nCounterexample:\")\n",
+    "            print(solver.model())\n",
+    "            print()\n",
+    "        return checked\n",
+    "    \n",
+    "    def prove_init_impl_inv(self):\n",
+    "        print(\"Check the initialization condition Init => Inv is valid:\")\n",
+    "        solver = Solver()\n",
+    "        solver.add(self.init_constraints())\n",
+    "        solver.add(Not(self.invariant_constraints()))\n",
+    "        self.prove_solver(solver)\n",
+    "\n",
+    "    def prove_inv_tr_impl_inv_p(self):\n",
+    "        print(\"Check the condition Inv ∧ Tr => Inv` is valid:\")\n",
+    "        solver2 = Solver()\n",
+    "        solver2.add(self.transition_constraints())\n",
+    "        solver2.add(self.invariant_constraints())\n",
+    "        solver2.add(Not(self.invariant_prime_constraints()))\n",
+    "        self.prove_solver(solver2)\n",
+    "\n",
+    "    def prove_inv_bad_impl_false(self):\n",
+    "        print(\"Check the initialization condition Inv ∧ Bad => False` is valid:\")\n",
+    "        solver3 = Solver()\n",
+    "        solver3.add(self.invariant_constraints())\n",
+    "        solver3.add(self.bad_state())\n",
+    "        self.prove_solver(solver3)\n",
     "\n",
     "\n",
-    "solver = Solver()\n",
-    "solver.add(init_constraints)\n",
-    "solver.add(Not(invariant_constraints))\n",
+    "    def check_conditions(self):\n",
+    "        self.prove_init_impl_inv()\n",
+    "        self.prove_inv_tr_impl_inv_p()\n",
+    "        self.prove_inv_bad_impl_false()\n",
     "\n",
-    "print(\"Check the initialization condition Init => Inv is valid:\")\n",
-    "check_is_sat(solver)\n",
-    "\n",
-    "solver2 = Solver()\n",
-    "solver2.add(transition_constraints)\n",
-    "solver2.add(invariant_constraints)\n",
-    "solver2.add(Not(invariant_prime_constraints))\n",
-    "\n",
-    "print(\"Check the condition Inv ∧ Tr => Inv` is valid:\")\n",
-    "check_is_sat(solver2)\n",
-    "\n",
-    "solver3 = Solver()\n",
-    "solver3.add(invariant_constraints)\n",
-    "solver3.add(bad_state)\n",
-    "print(\"Check the initialization condition Inv ∧ Bad => False` is valid:\")\n",
-    "check_is_sat(solver2)\n"
+    "ts = TransitionSystem()\n",
+    "ts.check_conditions()\n"
    ]
   },
   {
@@ -585,67 +599,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "solver:\n",
-      "Invariant equivalency holds.\n",
+      "Check whether inv_for_original_benchmark is equisat to itself:\n",
+      "fml1 => fml2: True\n",
+      "fml2 => fml1: True\n",
+      "Strong prove: = True\n",
+      "Weak prove: = True\n",
+      "z3 prove: = True\n",
       "\n",
-      "solver2:\n",
-      "Invariant equivalency holds.\n",
+      "Check whether inv_for_original_benchmark is equisat to inv_for_transfromed_benchmark 2:\n",
+      "fml1 => fml2: False\n",
+      "fml2 => fml1: False\n",
+      "Strong prove: = False\n",
+      "Weak prove: = True\n",
+      "z3 prove: = False\n",
       "\n",
-      "I0 == I1\n",
-      "counterexample\n",
-      "[x0 = 0, a1 = 0, y0 = 5001, y1 = 0, x1 = 0]\n",
-      "I0 == I2\n",
-      "counterexample\n",
-      "[y2 = 0, x0 = 5001, y0 = 5001, a2 = -1, x2 = -1, b2 = 4999]\n"
+      "Check whether inv_for_original_benchmark is equisat to inv_for_transfromed_benchmark 2:\n",
+      "fml1 => fml2: False\n",
+      "fml2 => fml1: False\n",
+      "Strong prove: = False\n",
+      "Weak prove: = True\n",
+      "z3 prove: = False\n",
+      "\n",
+      "Check whether inv_for_original_benchmark is equisat to inv_for_transfromed_benchmark 2:\n",
+      "fml1 => fml2: False\n",
+      "fml2 => fml1: False\n",
+      "Strong prove: = False\n",
+      "Weak prove: = True\n",
+      "z3 prove: = False\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# vars for Ts0\n",
-    "x0, y0, x0_prime, y0_prime = Ints('x0 y0 x0_prime y0_prime')\n",
+    "class InvariantEquivalenceChecker:\n",
+    "    def __init__(self):\n",
+    "        self.x, self.y, self.a, self.b, self.x_prime, self.y_prime = Ints('x y a b x_prime y_prime')\n",
     "\n",
-    "# vars for Ts1\n",
-    "x1, y1, a1, b1, x1_prime, y1_prime = Ints('x1 y1 a1 b1 x1_prime y1_prime')\n",
+    "    def inv_for_original_benchmark(self):\n",
+    "        '''(y > 5000 => x ≥ y) ∧ y ≥ 5000 ∧ x ≤ y'''\n",
+    "        return And(Implies(self.y > 5000, self.x >= self.y), self.y >= 5000, self.x <= self.y)\n",
     "\n",
-    "# vars for Ts2\n",
-    "x2, y2, a2, b2, x2_prime, y2_prime = Ints('x2 y2 a2 b2 x2_prime y2_prime')\n",
+    "    def z3_prove(self, claim):\n",
+    "        \"\"\"Stolen from z3 codebase part. Return boolean value of result\n",
+    "        Try to prove the given claim.\n",
     "\n",
-    "solver = Solver()\n",
-    "solver2 = Solver()\n",
+    "        This is a simple function for creating demonstrations.  It tries to prove\n",
+    "        `claim` by showing the negation is unsatisfiable.\n",
     "\n",
-    "# Define the invariants for Ts0 and Ts1\n",
-    "I0_0 = And(Implies(y0 > 5000, x0 >= y0), y0 >= 5000, x0 <= y0)\n",
-    "I0 = And(Implies(y0 > 5000, x0 + 1 > y0), y0 >= 5000, x0 - 1 < y0)\n",
-    "I1 = And(Implies(y1 >= a1, x1 >= y1), x1 <= y1, y1 >= a1)\n",
-    "I2 = And(Implies(a2-y2 <= -1, x2>y2-1),\n",
-    "        # Not(And(a2 -y2 <= -1, x2 - y2 <= -1)), // this is another variant of the line above\n",
-    "         x2 < y2 + 1, \n",
-    "         b2 - a2 >= 5000,\n",
-    "         a2 < y2 +1)\n",
+    "        >>> p, q = Bools('p q')\n",
+    "        >>> prove(Not(And(p, q)) == Or(Not(p), Not(q)))\n",
+    "        true\n",
+    "        \"\"\"\n",
+    "        s = Solver()\n",
+    "        s.add(Not(claim))\n",
+    "        return s.check() == unsat\n",
     "\n",
-    "solver.add(Not(Implies(I0, I1)))\n",
-    "solver.add(Not(Implies(I1, I0)))\n",
+    "    def weak_prove_eq(self, fml1, fml2):\n",
+    "        s1 = Solver()\n",
+    "        s1.add(Not(Implies(fml1, fml2)))\n",
+    "        s1.add(Not(Implies(fml2, fml1)))\n",
+    "        return s1.check() == unsat\n",
+    "    \n",
+    "    def strong_prove_eq(self, fml1, fml2):\n",
+    "        s1 = Solver()\n",
+    "        s1.add(Not(Implies(fml1, fml2)))\n",
+    "        s2 = Solver()\n",
+    "        s2.add(Not(Implies(fml2, fml1)))\n",
+    "        print(f\"fml1 => fml2: {s1.check() == unsat}\")\n",
+    "        print(f\"fml2 => fml1: {s2.check() == unsat}\")\n",
+    "        return s1.check() == unsat and s2.check() == unsat\n",
+    "    \n",
+    "    # Provers\n",
+    "    \n",
+    "    def prove_inv_equi_inv(self):\n",
+    "        print(\"Check whether inv_for_original_benchmark is equisat to itself:\")\n",
+    "        inv = self.inv_for_original_benchmark()\n",
+    "        inv_2 = And(Implies(self.y > 5000, self.x + 1 > self.y), self.y >= 5000, self.x - 1 < self.y)\n",
+    "        print(f\"Strong prove: = {self.strong_prove_eq(inv, inv_2)}\")\n",
+    "        print(f\"Weak prove: = {self.weak_prove_eq(inv, inv_2)}\")\n",
+    "        print(f\"z3 prove: = {self.z3_prove(inv == inv_2)}\")\n",
+    "        print()\n",
     "\n",
-    "solver2.add(Not(Implies(I0, I2)))\n",
-    "solver2.add(Not(Implies(I2, I0)))\n",
+    "    def prove_inv_equi_inv_2(self):\n",
+    "        '''(y > a => x ≥ y) ∧ y ≥ a ∧ x ≤ y'''\n",
+    "        print(\"Check whether inv_for_original_benchmark is equisat to inv_for_transfromed_benchmark 2:\")\n",
+    "        inv = self.inv_for_original_benchmark()\n",
+    "        I1 = And(Implies(self.y > self.a, self.x >= self.y), self.x <= self.y, self.y >= self.a)        \n",
+    "        print(f\"Strong prove: = {self.strong_prove_eq(inv, I1)}\")\n",
+    "        print(f\"Weak prove: = {self.weak_prove_eq(inv, I1)}\")\n",
+    "        print(f\"z3 prove: = {self.z3_prove(inv == I1)}\")\n",
+    "        print()\n",
+    "        \n",
+    "    def prove_inv_equi_inv_3(self):\n",
+    "        print(\"Check whether inv_for_original_benchmark is equisat to inv_for_transfromed_benchmark 2:\")\n",
+    "        inv = self.inv_for_original_benchmark()\n",
+    "        I2 = And(Implies(self.a - self.y <= -1, self.x > self.y - 1),\n",
+    "                  self.x < self.y + 1,\n",
+    "                  self.b - self.a >= 5000,\n",
+    "                  self.a < self.y + 1)\n",
+    "        print(f\"Strong prove: = {self.strong_prove_eq(inv, I2)}\")\n",
+    "        print(f\"Weak prove: = {self.weak_prove_eq(inv, I2)}\")\n",
+    "        print(f\"z3 prove: = {self.z3_prove(inv == I2)}\")\n",
+    "        print()\n",
+    "        \n",
+    "    def prove_inv_equi_inv_4(self):\n",
+    "        print(\"Check whether inv_for_original_benchmark is equisat to inv_for_transfromed_benchmark 2:\")\n",
+    "        inv = self.inv_for_original_benchmark()\n",
+    "        I2 = And(Or(Not(self.x - self.y <= -1), Not(self.x - self.a >= 0)),\n",
+    "            Not(self.a - self.y >= 1),\n",
+    "            self.b - self.a > 4999,\n",
+    "            Not(self.x - self.y >= 1),\n",
+    "            Or(Not(self.x - self.a <= -1), Not(self.a - self.y <= -1)))\n",
+    "        print(f\"Strong prove: = {self.strong_prove_eq(inv, I2)}\")\n",
+    "        print(f\"Weak prove: = {self.weak_prove_eq(inv, I2)}\")\n",
+    "        print(f\"z3 prove: = {self.z3_prove(inv == I2)}\")\n",
+    "        print()\n",
     "\n",
-    "print(f\"solver:\")\n",
-    "check_is_sat(solver)\n",
-    "print()\n",
-    "print(f\"solver2:\")\n",
-    "check_is_sat(solver2)\n",
-    "print()\n",
-    "print(\"I0 == I1\")\n",
-    "prove(I0 == I1)\n",
-    "print(\"I0 == I2\")\n",
-    "prove(I0 == I2)\n"
+    "\n",
+    "    def check_invariant_equivalence(self):\n",
+    "        self.prove_inv_equi_inv()\n",
+    "        self.prove_inv_equi_inv_2()\n",
+    "        self.prove_inv_equi_inv_3()\n",
+    "        self.prove_inv_equi_inv_4()\n",
+    "\n",
+    "iec = InvariantEquivalenceChecker()\n",
+    "iec.check_invariant_equivalence()\n"
    ]
   },
   {
@@ -745,7 +830,7 @@
     "solver.add(Not(I3))\n",
     "\n",
     "print(\"Check the initialization condition Init => Inv is valid:\")\n",
-    "check_is_sat(solver)\n",
+    "prove_solver(solver)\n",
     "\n",
     "solver2 = Solver()\n",
     "solver2.add(transition_constraints)\n",
@@ -753,13 +838,13 @@
     "solver2.add(Not(I3_prime))\n",
     "\n",
     "print(\"Check the condition Inv ∧ Tr => Inv` is valid:\")\n",
-    "check_is_sat(solver2)\n",
+    "prove_solver(solver2)\n",
     "\n",
     "solver3 = Solver()\n",
     "solver3.add(I3)\n",
     "solver3.add(bad_state)\n",
     "print(\"Check the initialization condition Inv ∧ Bad => False` is valid:\")\n",
-    "check_is_sat(solver2)\n"
+    "prove_solver(solver2)\n"
    ]
   }
  ],
