Split proofs into 2 files, refactored code

--- a/docs/theory_proof.ipynb
+++ b/docs/theory_proof.ipynb
@@ -737,114 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There I tried 2 approaches to prove that invariants equisat, but got 2 different answers. I believe it's not.\n",
-    "\n",
-    "#### Below I tried to fit invariant of a transformed benchmark to initial one and see whether it will take it, but I tried 3 different invariants (because solve_horn returned me >1 solution), but non of them worked. Probably I miss something"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Check the initialization condition Init => Inv is valid:\n",
-      "Invariant equivalency does not hold.\n",
-      "[y = 5000, b = 5001, x = 0, a = 1]\n",
-      "Check the condition Inv ∧ Tr => Inv` is valid:\n",
-      "Invariant equivalency does not hold.\n",
-      "[a = 5002,\n",
-      " x = 5000,\n",
-      " y_prime = 5003,\n",
-      " b = 10002,\n",
-      " x_prime = 5001,\n",
-      " y = 5002]\n",
-      "Check the initialization condition Inv ∧ Bad => False` is valid:\n",
-      "Invariant equivalency does not hold.\n",
-      "[a = 5002,\n",
-      " x = 5000,\n",
-      " y_prime = 5003,\n",
-      " y = 5002,\n",
-      " x_prime = 5001,\n",
-      " b = 10002]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a, b, x, y, x_prime, y_prime = Ints('a b x y x_prime y_prime')\n",
-    "\n",
-    "init_constraints = And(\n",
-    "    # a == 5000,\n",
-    "    # b == 10000,\n",
-    "    x == 0,\n",
-    "    y == 5000 \n",
-    ")\n",
-    "\n",
-    "transition_constraints = And(\n",
-    "    x_prime == x + 1,\n",
-    "    y_prime == If(x >= 5000, y + 1, y)\n",
-    ")\n",
-    "bad_state = And(x == 10000, x_prime != y_prime)\n",
-    "\n",
-    "I0 = And(Implies(y > 5000, x + 1 > y), y >= 5000, x - 1 < y)\n",
-    "I0_prime = And(Implies(y_prime > 5000, x_prime + 1 > y_prime),\n",
-    "                y_prime >= 5000, x_prime - 1 < y_prime)\n",
-    "\n",
-    "I1 = And(Implies(y >= a, x >= y), x <= y, y >= a)\n",
-    "I1_prime = And(Implies(y_prime >= a, x_prime >= y_prime), x_prime <= y_prime, y_prime >= a)\n",
-    "\n",
-    "I2 = And(Implies(a-y <= -1, x>y-1),\n",
-    "        # Not(And(a - y <= -1, x - y <= -1)),\n",
-    "         x < y + 1, \n",
-    "         b - a > 4999,\n",
-    "         a - 1 < y)\n",
-    "I2_prime = And(\n",
-    "    Implies(a-y_prime <= -1, x_prime>y_prime-1),\n",
-    "        # Not(And(a -y_prime <= -1, x_prime - y_prime <= -1)),\n",
-    "         x_prime < y_prime + 1, \n",
-    "         b - a > 4999,\n",
-    "         a - 1 < y_prime)\n",
-    "\n",
-    "I3 = And(Or(Not(x - y <= -1), Not(x - a >= 0)),\n",
-    "         Not(a - y >= 1),\n",
-    "         b - a > 4999,\n",
-    "         Not(x - y >= 1),\n",
-    "         Or(Not(x - a <= -1), Not(a - y <= -1)))\n",
-    "\n",
-    "I3_prime = And(Or(Not(x_prime - y_prime <= -1), Not(x_prime - a >= 0)),\n",
-    "         Not(a - y_prime >= 1),\n",
-    "         b - a > 4999,\n",
-    "         Not(x_prime - y_prime >= 1),\n",
-    "         Or(Not(x_prime - a <= -1), Not(a - y_prime <= -1)))\n",
-    "\n",
-    "# (¬(x + -1·y ≤ -1) ∨ ¬(x + -1·a ≥ 0)) ∧\n",
-    "# ¬(a + -1·y ≥ 1) ∧ ¬(a + -1·b ≥ 0) ∧ \n",
-    "# ¬(x + -1·y ≥ 1) ∧ \n",
-    "# (¬(x + -1·a ≤ -1) ∨ ¬(a + -1·y ≤ -1))\n",
-    "\n",
-    "solver = Solver()\n",
-    "solver.add(init_constraints)\n",
-    "solver.add(Not(I3))\n",
-    "\n",
-    "print(\"Check the initialization condition Init => Inv is valid:\")\n",
-    "prove_solver(solver)\n",
-    "\n",
-    "solver2 = Solver()\n",
-    "solver2.add(transition_constraints)\n",
-    "solver2.add(I3)\n",
-    "solver2.add(Not(I3_prime))\n",
-    "\n",
-    "print(\"Check the condition Inv ∧ Tr => Inv` is valid:\")\n",
-    "prove_solver(solver2)\n",
-    "\n",
-    "solver3 = Solver()\n",
-    "solver3.add(I3)\n",
-    "solver3.add(bad_state)\n",
-    "print(\"Check the initialization condition Inv ∧ Bad => False` is valid:\")\n",
-    "prove_solver(solver2)\n"
+    "So, according to z3, I tried to show Inv(x,y) <==> Inv2(x,y,a,b) (moreover tried 3 output SPACER invariants) but got a result that theory about equisat answers is not true"
    ]
   }
  ],
